src/accounts/snapshots/payment_account__accounts__generate__tests__case_3_chargeback.snap
---
source: src/accounts/generate.rs
expression: "serde_json::json!(result)"

---
{
  "1": {
    "available": 0.5,
    "client": 1,
    "held": 0.0,
    "locked": true,
    "total": 0.5,
    "transactions": [
      {
        "amount": 1.0,
        "client": 1,
        "payment_type": "deposit",
        "tx": 1
      },
      {
        "amount": 2.0,
        "client": 1,
        "payment_type": "deposit",
        "tx": 3
      },
      {
        "amount": 1.5,
        "client": 1,
        "payment_type": "withdrawal",
        "tx": 4
      },
      {
        "amount": null,
        "client": 1,
        "payment_type": "dispute",
        "tx": 1
      },
      {
        "amount": null,
        "client": 1,
        "payment_type": "chargeback",
        "tx": 1
      }
    ]
  },
  "2": {
    "available": 2.0,
    "client": 2,
    "held": 0.0,
    "locked": false,
    "total": 2.0,
    "transactions": [
      {
        "amount": 2.0,
        "client": 2,
        "payment_type": "deposit",
        "tx": 2
      }
    ]
  }
}
